tests/snapshots/python_help_snapshots__python_help_contract@windows.snap
---
source: tests/python_help_snapshots.rs
expression: rendered
---
== session: files ==
-- step 1 --
call:
{
  "tool": "py_repl",
  "arguments": {
    "input": "help(len)\n",
    "timeout_ms": 5000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "Help on built-in function len in module builtins:\n\nlen(obj, /)\n    Return the number of items in a container.\n\n"
    }
  ]
}
-- step 2 --
call:
{
  "tool": "py_repl",
  "arguments": {
    "input": "import pydoc; pydoc.help(len)\n",
    "timeout_ms": 5000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "Help on built-in function len in module builtins:\n\nlen(obj, /)\n    Return the number of items in a container.\n\n"
    }
  ]
}
-- step 3 --
call:
{
  "tool": "py_repl",
  "arguments": {
    "input": "help()\n",
    "timeout_ms": 1000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "<PYTHON HELP BANNER>"
    }
  ]
}
-- step 4 --
call:
{
  "tool": "py_repl",
  "arguments": {
    "input": "len\n",
    "timeout_ms": 1000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "Help on built-in function len in module builtins:\n\nlen(obj, /)\n    Return the number of items in a container.\n\nhelp> "
    }
  ]
}
-- step 5 --
call:
{
  "tool": "py_repl",
  "arguments": {
    "input": "q\n",
    "timeout_ms": 1000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "\nYou are now leaving help and returning to the Python interpreter.\nIf you want to ask for help on a particular object directly from the\ninterpreter, you can type \"help(object)\".  Executing \"help('string')\"\nhas the same effect as typing a particular string at the help> prompt.\n"
    }
  ]
}
-- step 6 --
call:
{
  "tool": "py_repl",
  "arguments": {
    "input": "1+1\n",
    "timeout_ms": 5000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "2\n"
    }
  ]
}
